@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2015-08-30 r69214) -- "Unsuffered Consequences"
+R Under development (unstable) (2015-08-31 r69241) -- "Unsuffered Consequences"
 Copyright (C) 2015 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1352,7 +1352,13 @@ N
 +           dchisq((0:16)/16, df=0, ncp=0) == c(Inf, rep(0, 16)))
 > ## gave all NaN's  for R <= 3.2.2
 > 
+> ## pchisq(*, df=0, ncp > 0, log.p=TRUE) :
+> th <- 10*c(1:9,10^c(1:3,7))
+> pp <- pchisq(0, df = 0, ncp=th, log.p=TRUE)
+> stopifnot(all.equal(pp, -th/2, tol=1e-15))
+> ## underflowed at about th ~= 60  in R <= 3.2.2
+> 
 > 
 > cat("Time elapsed: ", proc.time() - .ptime,"\n")
-Time elapsed:  0.98 0.014 0.994 0 0 
+Time elapsed:  1.05 0.072 1.143 0 0 
 > 
